# book-reader

./: .gitignore  README.md  pyproject.toml
book_reader/: main.py  reader.kv  readerdouble.kv  readersingle.kv
tests/: test_book_reader.py
