[tool.poetry]
name = "book-reader"
version = "0.1.0"
description = ""
authors = ["kakakoi"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"
rarfile = "^4.0"
kivymd = "^0.104.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true